// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree when aria-label property is changed 1`] = `
Object {
  "name": "Some more detailed label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree when popover is opened 1`] = `
Object {
  "expanded": true,
  "focused": true,
  "name": "More information",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
Object {
  "name": "More information",
  "role": "button",
}
`;
